--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Advanced Sorting Visualizer</title>
+    <title>Sorting Visualizer</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body>
-    <h1>Advanced Sorting Visualizer</h1>
+<body >
+    <h1>Bubble Sorting Visualizer</h1>
+    <h3>This bird is sorting the socks using the bubble sort algorithm.</h3>
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2">Associated Complexities</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>time complexity</td>
+                <td>space complexity(auxillary)</td>
+            </tr>
+            <tr>
+                <td>O(n^2)</td>
+                <td>O(1)</td>
+            </tr>
+        </tbody>
+    </table>
     <canvas id="myCanvas"></canvas>
 
     <script src="bird.js"></script>
