--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Sorting Visualizer</title>
+    <title> Bubble Sorting Visualizer</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body >
     <h1>Bubble Sorting Visualizer</h1>
-    <h3>This bird is sorting the socks using the bubble sort algorithm.</h3>
+    <h3>The bird is sorting the socks using the Bubble sort algorithm.</h3>
     <table>
         <thead>
             <tr>
@@ -16,8 +16,8 @@
         </thead>
         <tbody>
             <tr>
-                <td>time complexity</td>
-                <td>space complexity(auxillary)</td>
+                <td>Time Complexity</td>
+                <td>Space Complexity(auxillary)</td>
             </tr>
             <tr>
                 <td>O(n^2)</td>
