--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body >
     <h1>Bubble Sorting Visualizer</h1>
-    <h3>The bird is sorting the socks using the Bubble sort algorithm.</h3>
+    <h3>The bird is sorting the socks using the Bubble Sort Algorithm.</h3>
     <table>
         <thead>
             <tr>
@@ -17,7 +17,7 @@
         <tbody>
             <tr>
                 <td>Time Complexity</td>
-                <td>Space Complexity(auxillary)</td>
+                <td>Space Complexity(Auxillary)</td>
             </tr>
             <tr>
                 <td>O(n^2)</td>
